# site-generator

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  builder.bzl  repositories.bzl  requirements.bzl  rule.bzl  setup.py  site-publish.py
aip_site/: cli.py  server.py
aip_site/support/scss/imports/: header.scss
aip_site/support/templates/: index.html.j2
aip_site/support/templates/includes/: breadcrumb.html.j2  header.html.j2
internal/: main.py  requirements.txt
